--- a/src/view/App.view.xml
+++ b/src/view/App.view.xml
@@ -8,75 +8,63 @@
 	xmlns:mvc="sap.ui.core.mvc">
 
 	<App id="app">
-	<Page id="page">
+	<Page id="page" title = "1. Bundesliga">
+		
+		<!-- <CustomListItem type="Active" press=".navToIncidenceDetail"> -->
+		
 		<content> 
-
-			<Table>
+		<Button text= "Test"  press= ".navToDetail"/>
+			<Table 
+				items="{bundesligaPlacing>/}">
+				
 				<columns>
-					<TableColumn>
-						<Label text = "Platz "/>
-					</TableColumn>
-					<TableColumn>
-						<Label text = "Verein "/>
-					</TableColumn>
-					<TableColumn>
-						<Label text = "Spiele "/>
-					</TableColumn>
-					<TableColumn>
-						<Label text = "Differenz "/>
-					</TableColumn>
-					<TableColumn>
-						<Label text = "Punkte"/>
-					</TableColumn>
-				</columns>
-				<rows>
-					<TableRow>
-						<cells>
-							<TableCell>
-								<content>
-									<Label text = "BVB"/>
-								</content>
-							</TableCell>
-						</cells>
-					</TableRow>
-				</rows>
+				
+				<Column >
+					<Text text="Verein" />
+				</Column>
+				
+				<Column>
+					<Text text="Spiele" />
+				</Column>
+				<Column>
+					<Text text="Diff" />
+				</Column>
+				<Column>
+					<Text text="S-U-N" />
+				</Column>
+				<Column>
+					<Text text="Tore" />
+				</Column>
+				<Column>
+					<Text text="Punkte" />
+				</Column>
+			</columns>
+			<items>
+				<ColumnListItem>
+					<cells>
+						
+						<Text text="{bundesligaPlacing>teamName}" />
+						<Text text="{bundesligaPlacing>matches}" />
+						<Text text="{bundesligaPlacing>goalDiff}" />
+						<Text text="{
+							parts: [
+							{path: 'bundesligaPlacing>won'},
+							{path: 'bundesligaPlacing>draw'},
+							{path: 'bundesligaPlacing>lost'}],
+							formatter: '.formatter.sun' }"/>
+						<Text text="{bundesligaPlacing>goals}" />
+						<Text text="{bundesligaPlacing>points}" />
+					</cells>
+				</ColumnListItem>
+			</items>
 			</Table>
 
 
 
 
-
-
-
-			<List
-				headerText="Verein"
-				items="{bundesligaPlacing>/}"> 
-					<items>
-				<StandardListItem
-				
-				
-
-				title="{bundesligaPlacing>teamName}"
-				/>
-					</items>
-				
-				<ObjectListItem
-					title = "{bundesligaPlacing>teamName}">
-					<firstStatus>
-						<ObjectStatus text="{
-                        	    path: 'bundesligaPlacing>points',
-                            	formatter : '.formatter.points'
-                            	}"
-								
-						/>
-								
-					</firstStatus>
-
-				</ObjectListItem>
-			</List>
 			
 		</content>
 	</Page>
-	</App>
+	</App> 
 
 </mvc:View>
