FEAT: Navigation to detail page

--- a/src/view/App.view.xml
+++ b/src/view/App.view.xml
@@ -2,69 +2,6 @@
 	controllerName="ifm.bs.template.templateproject.controller.App"
 	displayBlock="true"
 	xmlns="sap.m"
-	xmlns:f="sap.f"
-	xmlns:core="sap.ui.core"
-	xmlns:grid="sap.ui.layout.cssgrid"
 	xmlns:mvc="sap.ui.core.mvc">
-
-	<App id="app">
-	<Page id="page" title = "1. Bundesliga">
-		
-		<!-- <CustomListItem type="Active" press=".navToIncidenceDetail"> -->
-		
-		<content> 
-		<Button text= "Test"  press= ".navToDetail"/>
-			<Table 
-				items="{bundesligaPlacing>/}">
-				
-				<columns>
-				
-				<Column >
-					<Text text="Verein" />
-				</Column>
-				
-				<Column>
-					<Text text="Spiele" />
-				</Column>
-				<Column>
-					<Text text="Diff" />
-				</Column>
-				<Column>
-					<Text text="S-U-N" />
-				</Column>
-				<Column>
-					<Text text="Tore" />
-				</Column>
-				<Column>
-					<Text text="Punkte" />
-				</Column>
-			</columns>
-			<items>
-				<ColumnListItem>
-					<cells>
-						
-						<Text text="{bundesligaPlacing>teamName}" />
-						<Text text="{bundesligaPlacing>matches}" />
-						<Text text="{bundesligaPlacing>goalDiff}" />
-						<Text text="{
-							parts: [
-							{path: 'bundesligaPlacing>won'},
-							{path: 'bundesligaPlacing>draw'},
-							{path: 'bundesligaPlacing>lost'}],
-							formatter: '.formatter.sun' }"/>
-						<Text text="{bundesligaPlacing>goals}" />
-						<Text text="{bundesligaPlacing>points}" />
-					</cells>
-				</ColumnListItem>
-			</items>
-			</Table>
-
-
-
-
-			
-		</content>
-	</Page>
-	</App> 
-
+	<App id="app"/>
 </mvc:View>
