--- a/src/view/Detail.view.xml
+++ b/src/view/Detail.view.xml
@@ -1,12 +1,37 @@
 <mvc:View
 	displayBlock="true"
+	height="100%"
+	busyIndicatorDelay="0"
 	xmlns:mvc="sap.ui.core.mvc"
 	xmlns="sap.m"
 	controllerName="ifm.bs.template.templateproject.controller.Detail">
 	<Page
 		id="detail"
-		title="tbd"
+		title="Spiele"
 		showNavButton="true"
 		navButtonPress=".onNavBack">
+	<content>
+		
+		<Table items = "{spiele>/}">
+			
+			<columns>
+				<Column>
+					<Text text= "Spieltag"/>
+				</Column>
+				<Column>
+					<Text text= ""/>
+				</Column>
+			</columns>
+			<items>
+			<ColumnListItem type="Active">
+
+			<cells>
+				<!-- <Text text = "{gruppe>groupName}"/> -->
+			</cells>
+
+			</ColumnListItem>
+			</items>
+		</Table>
+	</content>
 	</Page>
 </mvc:View>
